--- a/src/index.scss
+++ b/src/index.scss
@@ -547,3 +547,153 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.user_profile_main {
+  .button_back {
+    button {
+      width: 80px;
+      height: 80px;
+      display: flex;
+      justify-content: center;
+      align-items:center;
+      align-items:center;
+      border: none;
+      background-color: #090909;
+      color: white;
+      cursor: pointer;
+      font-size: 20px;
+      opacity: 0.7;
+      margin-top: 10px;
+      transition: opacity 200ms ease;
+    }
+    button:hover {
+      opacity: 1;
+    }
+  }
+  .header_div_user {
+    width: 100%;
+    height: 260px;
+    background-color:#090909;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .part1_user_profile {
+      margin-left: 50px;
+      display: flex;
+      align-items: center;
+      gap: 40px;
+      .radius_div_profile {
+        width:200px;
+        height: 200px;
+        border-radius: 50%;
+        background-color: black;
+        display:flex;
+        font-size: 70px;
+        border: 2px solid white;
+        font-weight:600;
+        justify-content: center;
+        align-items: center;
+      }
+      .radius_text_div {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        h1 {
+          font-size: 50px;
+          font-family: 'Poppins',serif;
+        }
+        h3 {
+          color: #ccc;
+          font-size: 20px;
+          font-weight: 500;
+          font-family: 'Poppins',serif;
+
+        }
+      }
+
+    }
+    
+    
+  }
+  .data_active {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+    div.block_data {
+      width: calc(100% / 2);
+      height: 80px;
+      background-color:#090909;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      div {
+        display: flex;
+        gap: 10px;
+        margin-left: 30px;
+      }
+      .number_of_data {
+        width: 80px;
+        background-color: black;
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+
+      }
+      h3 {
+        font-size:30px;
+      }
+      .icon_div {
+        width: 45px;
+        font-size: 45px;
+      }
+    }
+  }
+  .saved_post_div {
+    width: 100%;
+    min-height: 200px;
+    height: auto;
+    background-color: #090909;
+    margin-top: 10px;
+    .name_div {
+      width: 100%;
+      height: 80px;
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .save_icon {
+        position: relative;
+        top: 5px;
+      }
+    }
+    h3 {
+      text-align: center;
+      margin-top: 40px;
+      color: #ccc;
+      font-size: 30px;
+    }
+  }
+  .logout_div {
+    width: 100%;
+    height: 90px;
+    background-color: #090909;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 35px;
+    display: flex;
+    gap: 10px;
+    cursor: pointer;
+    opacity: 0.7;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 200ms ease;
+  }
+  .logout_div:hover {
+    opacity: 1;
+  }
+
+  
+}
