--- a/src/index.scss
+++ b/src/index.scss
@@ -699,37 +699,38 @@ a {
   
 }
 
-.menu_div {
-  position: absolute;
-  width: 200px;
-  height: 220px;
-  background-color: black;
-  right: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  top: 80px;
-  button {
-    width: 100%;
-    height: 50px;
-    background: none;
-    border: none;
-    color: white;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+  .menu_div {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-color: #0a0a0a;
+    border: 1px solid #ccc;
+    right: 10px;
+    padding: 5px 5px;
+    top: 80px;
+    button {
+      width: 200px;
+      height: 50px;
+      background: none;
+      border: none;
+      color: white;
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: left;
+      padding-left: 15px;
+      gap: 10px;
+    }
+
+    button:hover {
+      background-color: #1c1c1c;
+      cursor: pointer;
+    }
+    .icon_menu {
+      font-size: 26px;
+    }
+    .img_menu {
+      width: 30px;
+    }
   }
-  button:hover {
-    background-color: #1c1c1c;
-    cursor: pointer;
-  }
-  .icon_menu {
-    font-size: 26px;
-  }
-  .img_menu {
-    width: 30px;
-  }
-}
 
